# blueberry-compiler

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  webpage.yml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/generators/c/src/: lib.rs
crates/generators/codegen-core/: Cargo.toml
crates/generators/codegen-core/src/: lib.rs
crates/generators/idl/: Cargo.toml
crates/generators/idl/src/: lib.rs
crates/generators/python/: Cargo.toml
crates/generators/python/src/: lib.rs
crates/generators/rust/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  grammar.lalrpop  lib.rs
crates/parser/tests/: idl_parsing.rs
crates/parser/tests/fixtures/: annotations.idl  enum_auto_values.idl  enum_only.idl  example.idl  floating_literals.idl  imports.idl  integer_literals.idl  message_basic.idl  module_only.idl  scoped_modules.idl  struct_basic.idl
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
pkg/: index.html
src/: ast.rs  generator.rs  grammar.lalrpop  lib.rs
tests/: idl_parsing.rs
tests/fixtures/: const_folding.idl  consts.idl  fixed_literals.idl  typedefs.idl
