[package]
name = "blueberry-parser"
edition = "2024"
version = "0.1.0"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
blueberry-ast = { path = "../ast", version = "0.1.0" }
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
evalexpr = "11"

[build-dependencies]
lalrpop = "0.22.2"
